Fix selection on mobile

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -1,5 +1,7 @@
+
+
 .selected {
-    transform: translateX(1rem);
+    border: 2px solid #fff;
 }
 
 .site-menu {
@@ -29,6 +31,8 @@
 
 @include for-phone-only {
     
+
+
     .site-menu {
         .menu {
             margin: 80px 0 0;
@@ -74,5 +78,11 @@
                 border-radius: 0;
             }
         }
+    }
+}
+
+@include for-desktop-up {
+    .selected {
+        transform: translateX(1rem);
     }
 }
